@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-26T00:35:10Z",
+  "timestamp" : "2022-09-26T08:10:15Z",
   "count_outdated" : 77,
   "uniques_outdated" : 64,
-  "count" : 84,
-  "uniques" : 71,
+  "count" : 85,
+  "uniques" : 72,
   "clones" : [
     {
       "timestamp": "2022-09-13T00:00:00Z",
@@ -49,6 +49,13 @@
     },
     {
       "timestamp": "2022-09-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-26T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
