@@ -1,3 +1,11 @@
+2022-09-26T08:10:15Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3126098731
+* notice: last 14d: unq all: 2 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 64 77 / 71 84
+* notice: next accum: outdated-unq outdated-all / unq all: 64 77 / 72 85
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-26]
+
 2022-09-26T00:35:10Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3124295025
 * notice: last 14d: unq all: 2 7
